<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">并行图像处理</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_layout_title">Demo for parallel computing on Android:</string>
    <string name="opencl_layout_title">OpenCL demo:</string>
    <string name="sha_1_button_text">SHA-1 Encryption</string>
    <string name="sift_button_text">Sift Key-point extract</string>
    <string name="srad_button_text">SRAD denoising</string>
    <string name="sobel_button_text">Sobel filter</string>
    <string name="gaussian_button_text">Gaussian filter</string>
    <string name="bilateral_button_text">Bilateral filter</string>
    <string name="k_means_button_text">K-means segmentation</string>
    <string name="matrix_button_text">Matrix multiplication</string>
    <string name="About">About</string>
    <string name="show_results">Results</string>
    <string name="image_processing">Image processing</string>
    <string name="choose_pic">Choose a picture</string>
    <string name="info_button_text">Get device infomation</string>
    <string name="click_here_info">Click here to get information</string>
    <string name="getting_info">Getting device information...</string>
    <string name="choose_image_button_text">Choose image</string>
    <string name="original_image_text">The original image:</string>
    <string name="cpu_image_text">CPU result:</string>
    <string name="gpu_image_text">GPU result:</string>
    <string name="get_info_text">Get device information.</string>
    <string name="processing_text">Image processing</string>
    <string name="iter_text">Please input iter times:</string>
    <string name="please_input_iter">Please input iter time!!!</string>
    <string name="processing_wait">Processing...Please Wait!</string>
    <string name="matrix_size">Matirx size:</string>
    <string name="iter_time">Iter time:</string>
    <string name="start_computing">Start Computing!</string>
    <string name="size_require">The matrix size must between 16 and 256.</string>
    <string name="original_matrix">The original matrix:</string>
    <string name="result_matrix">The result matrix:</string>
    <string name="plain_text">Plain text:</string>
    <string name="sha_1_key_text">Key:</string>
    <string name="sha_1_cipher">Cipher:</string>
    <string name="start_encryption">Start Computing Cipher</string>
    <string name="input_plain_text">Please input plain text or iter time!</string>
    <string name="show_cipher_result">Show Entryption Results</string>
    <string name="render_script_title">RenderScript demo:</string>
    <string name="hdr_text">HDR Algorithm</string>
    <string name="Gaussian_filter_results">Gaussian filter results:</string>
    <string name="nlmeans">NL-Means</string>
    <string name="kernel_folder_name">KernelFile</string>
    <string name="kernel_release_path">/storage/sdcard0/</string>
</resources>
