<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matrix_size"
                        android:textColor="#ffffff" />

                    <EditText
                        android:id="@+id/matrix_size_edittext"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:editable="false"
                        android:textColor="#ffffff" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/iter_time"
                        android:textColor="#ffffff" />

                    <EditText
                        android:id="@+id/iter_time_matrix_edittext"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:textColor="#ffffff" >
                    </EditText>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/matrix_result_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/scrollView1"
        android:text="@string/show_results"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/computing_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/matrix_result_button"
        android:layout_alignBottom="@+id/matrix_result_button"
        android:layout_toLeftOf="@+id/matrix_result_button"
        android:text="@string/start_computing"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/matrix_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_below="@+id/scrollView1"
        android:text="@string/original_matrix"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/original_matrix_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/matrix_title_text"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/matrix_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/original_matrix_textview"
        android:text="@string/result_matrix"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/result_matrix_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/matrix_result_text"
        android:textColor="#ffffff" />

</RelativeLayout>