<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <FrameLayout
        android:id="@+id/entryption_frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/sha_1_background_image" >

            <TextView
                android:id="@+id/sha_1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:shadowColor="#ff000000"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="2"
                android:text="@string/sha_1_button_text"
                android:textColor="#ffffff"
                android:textSize="16pt" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </RelativeLayout>
    </FrameLayout>

    <EditText
        android:id="@+id/plain_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entryption_frame_layout"
        android:layout_toRightOf="@+id/plain_textview"        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/plain_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/plain_edittext"
        android:layout_alignBottom="@+id/plain_edittext"
        android:layout_alignLeft="@+id/entryption_frame_layout"
        android:text="@string/plain_text"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/plain_iter_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/plain_edittext"
        android:layout_below="@+id/plain_edittext"
        android:inputType="number"
        android:text="100"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/plain_iter_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/plain_iter_edittext"
        android:layout_alignBottom="@+id/plain_iter_edittext"
        android:layout_alignLeft="@+id/plain_textview"
        android:text="@string/iter_time"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/key_result_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/plain_iter_edittext"
        android:layout_below="@+id/plain_iter_edittext"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/key_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/key_result_textview"
        android:layout_alignBottom="@+id/key_result_textview"
        android:layout_alignLeft="@+id/plain_iter_textview"
        android:layout_marginTop="30dp"
        android:text="@string/sha_1_key_text"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/cipher_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/key_textview"
        android:layout_below="@+id/key_textview"
        android:layout_marginTop="12dp"
        android:text="@string/sha_1_cipher"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/cipher_result_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cipher_textview"
        android:layout_alignBottom="@+id/cipher_textview"
        android:layout_alignLeft="@+id/key_result_textview"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/start_encryption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/plain_iter_edittext"
        android:layout_below="@+id/cipher_textview"
        android:layout_marginTop="20dp"
        android:text="@string/start_encryption"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/show_cipher_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start_encryption"
        android:layout_alignRight="@+id/start_encryption"
        android:layout_below="@+id/start_encryption"
        android:text="@string/show_cipher_result"
        android:textColor="#ffffff" />

</RelativeLayout>