<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/bilateral_original_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/original_image_text"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textView2"
                        android:layout_below="@+id/imageView2"
                        android:layout_marginLeft="13dp"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/gpu_image_text"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/bilateral_original_image"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/cpu_image_text"
                        android:textColor="#ffffff" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="270dp"
                        android:layout_height="270dp"
                        android:layout_alignLeft="@+id/bilateral_original_image"
                        android:layout_below="@+id/textView2"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:src="@drawable/adaboost_image" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="270dp"
                        android:layout_height="270dp"
                        android:layout_below="@+id/textView3"
                        android:layout_centerHorizontal="true"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:src="@drawable/adaboost_image" />

                    <ImageView
                        android:id="@+id/bilateral_original_image"
                        android:layout_width="270dp"
                        android:layout_height="270dp"
                        android:layout_alignLeft="@+id/imageView3"
                        android:layout_below="@+id/bilateral_original_textview"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:src="@drawable/adaboost_image" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/show_results"
            android:textColor="#ffffff"
            android:textSize="6pt" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/button3"
            android:text="@string/bilateral_button_text"
            android:textColor="#ffffff"
            android:textSize="6pt" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/button2"
            android:text="@string/choose_image_button_text"
            android:textColor="#ffffff"
            android:textSize="6pt" />
    </RelativeLayout>

</RelativeLayout>